--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,9 +11,9 @@
   
   <nav>
     <ul>
-      <li><a href="/">home</a></li>
-      <li><a href="/about">about</a></li>
-      <li><a href="/contact">contact</a></li>
+      <li><a href="{{site.baseurl}}">home</a></li>
+      <li><a href="{{site.baseurl}}">about</a></li>
+      <li><a href="{{site.baseurl}}">contact</a></li>
     </ul>
   </nav>
    </header> 
