--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,9 +11,9 @@
   
   <nav>
     <ul>
-      <li><a href="{{site.baseurl}}">home</a></li>
-      <li><a href="{{site.baseurl}}">about</a></li>
-      <li><a href="{{site.baseurl}}">contact</a></li>
+      <li><a href="{{site.baseurl}}/">home</a></li>
+      <li><a href="{{site.baseurl}}/about/">about</a></li>
+      <li><a href="{{site.baseurl}}/contact/">contact</a></li>
     </ul>
   </nav>
    </header> 
